name: hawt-backend-glfw
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
     

library
    exposed-modules:
        Graphics.UI.Hawt.Backend.GLFW
    build-depends:
        GLFW-b -any,
        base -any,
        hawt -any,
        monad-loops -any
    default-language: Haskell2010
    hs-source-dirs: src

