name: hawt-backend-glut
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
     

library
    exposed-modules:
        Graphics.UI.Hawt.Backend.GLUT
    build-depends:
        GLUT -any,
        OpenGL -any,
        base -any,
        hawt -any,
        reactive-banana -any
    default-language: Haskell2010
    hs-source-dirs: src

