name: opengl-ui-test
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable opengl-ui-test
    build-depends: GLUT -any, OpenGL -any, base -any, lens -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules: Graphics.UI.Hawt.Widget
                   Graphics.UI.Hawt.Widget.Panel Graphics.UI.Hawt.Layout.BorderLayout
 
 