name: opengl-ui-test
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
     

executable opengl-ui-test
    main-is: Main.hs
    build-depends:
        FTGL -any,
        GLUT -any,
        OpenGL -any,
        OpenGLRaw -any,
        base -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Graphics.UI.Hawt.Window
        Graphics.UI.Hawt.Widget
        Graphics.UI.Hawt.Drawing
        Graphics.UI.Hawt.Widget.Panel
        Graphics.UI.Hawt.Widget.Label
        Graphics.UI.Hawt.Widget.Button
        Graphics.UI.Hawt.Layout.BoxLayout
        Graphics.UI.Hawt.Layout.BorderLayout

